--- a/web/src/component/Home/index.less
+++ b/web/src/component/Home/index.less
@@ -1,7 +1,9 @@
+@import '~antd/dist/antd.css';
+
 .App {
+  margin-top: 200px;
+  margin-left: 520px;
   .text {
     font-size: 20px;
-    margin-top: 200px;
-    margin-left: 520px;
   }
 }
