add return book and checkout
Signed-off-by: DQing <15829258737@163.com>

--- a/web/src/component/Menu/index.less
+++ b/web/src/component/Menu/index.less
@@ -6,6 +6,18 @@
     cursor: pointer;
     transition: color .3s;
   }
+  .quit {
+    float: right;
+    margin-right: 20px;
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color .3s;
+    .text{
+      margin-right: 4px;
+    }
+  }
   .trigger:hover {
     color: #1890ff;
   }
