--- a/web/src/component/Book/index.less
+++ b/web/src/component/Book/index.less
@@ -16,6 +16,10 @@
       .bookInfo {
         text-align: left;
         margin-left: 30%;
+        padding: 5px 0 13px 0;
+        .btn{
+          margin-left: 10px;
+        }
       }
     }
   }
