--- a/web/src/component/Book/index.less
+++ b/web/src/component/Book/index.less
@@ -6,18 +6,17 @@
     text-align: center;
     font-size: 18px;
   }
+  .ant-col-6 {
+    width: 24% !important;
+  }
   .bookRow {
     .bookDetail {
       text-align: center;
-      img {
-        border: 1px solid gainsboro;
-        border-radius: 4px;
-      }
       .bookInfo {
         text-align: left;
         margin-left: 30%;
         padding: 5px 0 13px 0;
-        .btn{
+        .btn {
           margin-left: 10px;
         }
       }
