--- a/web/src/component/Book/index.less
+++ b/web/src/component/Book/index.less
@@ -6,15 +6,16 @@
     text-align: center;
     font-size: 18px;
   }
-  .ant-col-6 {
-    width: 24% !important;
-  }
   .bookRow {
+    .ant-col-6 {
+      width: 24% !important;
+      height: 350px;
+    }
     .bookDetail {
       text-align: center;
       .bookInfo {
         text-align: left;
-        margin-left: 30%;
+        margin-left: 19%;
         padding: 5px 0 13px 0;
         .btn {
           margin-left: 10px;
