--- a/web/src/component/Movie/index.less
+++ b/web/src/component/Movie/index.less
@@ -6,18 +6,22 @@
     text-align: center;
     font-size: 18px;
   }
-  .bookRow {
-    .bookDetail {
+  .movieRow {
+    .ant-col-6 {
+      width: 24% !important;
+      height: 350px;
+    }
+    .movieDetail {
       text-align: center;
       img {
         border: 1px solid gainsboro;
         border-radius: 4px;
       }
-      .bookInfo {
+      .movieInfo {
         text-align: left;
-        margin-left: 30%;
+        margin-left: 19%;
         padding: 5px 0 13px 0;
-        .btn{
+        .btn {
           margin-left: 10px;
         }
       }
